# paperwork

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS.patrons.json  AUTHORS.py  AUTHORS.ui.json  CONTRIBUTING.md  Makefile  README.markdown  activate_test_env.sh  deliver.sh  deliver_doc.sh  set_apt_proxy.sh  update_flatpak_repo.sh  work.openpaper.Paperwork.json
openpaperwork-core/: ChangeLog  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  tox.ini
openpaperwork-core/doc/: conf.py  config.rst  config_file.rst  core.rst  core_api.rst  example_app.rst  example_plugin.rst  fs.rst  index.rst  logs.rst  mainloop.rst  promise.rst
openpaperwork-core/examples/: core_plugins.py
openpaperwork-core/l10n/: ca.po  de.po  es.po  fr.po  messages.pot  oc.po  sv.po  uk.po  zh_Hans.po
openpaperwork-core/openpaperwork_core/: __init__.py  config_file.py  mainloop_asyncio.py  promise.py
openpaperwork-core/src/openpaperwork_core/: __init__.py  app.py  archives.py  censor.py  config_file.py  data_versioning.py  deps.py  flatpak.py  frozen.py  http.py  interactive.py  log_collector.py  log_print.py  mainloop_asyncio.py  promise.py  sqlite.py  uncaught_exception.py  urls.py
openpaperwork-core/tests/: tests_config_file.py  tests_core.py  tests_mainloop_asyncio.py  tests_plugins.py  tests_url.py
openpaperwork-core/tests/beacon/: tests_stats.py  tests_sysinfo.py
openpaperwork-core/tests/cmd/: tests_config.py  tests_plugins.py
openpaperwork-core/tests/config/: tests_config.py
openpaperwork-core/tests/docscan/: tests_libinsane.py
openpaperwork-core/tests/fs/: tests_gio.py  tests_memory.py  tests_python.py
openpaperwork-core/tests/mainloop/: tests_asyncio.py
openpaperwork-core/tests/pillow/: tests_img.py
openpaperwork-core/tests/spatial/: tests_rtree.py  tests_simple.py
openpaperwork-core/tests/thread/: tests_pool.py  tests_simple.py
openpaperwork-core/tests/work_queue/: tests_default.py
openpaperwork-gtk/: ChangeLog  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
openpaperwork-gtk/doc/: conf.py  index.rst
openpaperwork-gtk/l10n/: ca.po  de.po  es.po  fr.po  messages.pot  oc.po  sv.po  uk.po  zh_Hans.po
openpaperwork-gtk/src/openpaperwork_gtk/: __init__.py  colors.py  deps.py  gtk_init.py  resources.py  screenshots.py
paperwork-backend/: ChangeLog  MANIFEST.in  Makefile  README.markdown  pyproject.toml  setup.py  tox.ini
paperwork-backend/doc/: conf.py  index.rst
paperwork-backend/l10n/: ca.po  de.po  es.po  fr.po  messages.pot  oc.po  sv.po  uk.po  zh_Hans.po
paperwork-backend/paperwork_backend/: __init__.py  config.py  deps.py  docexport.py  docimport.py  docsearch.py  fs.py  index.py  shell.py  shell_cmd.py  util.py
paperwork-backend/scripts/: simulate-workdir.py  simulate-workdir2.py  simulate-workdir_3d.py  stats.py
paperwork-backend/tests/: tests_config.py  tests_datadirhandler.py  tests_pagetracker.py  tests_util.py
paperwork-gtk/: AppImageBuilder.yml  ChangeLog  MANIFEST.in  Makefile  localize.sh  pyproject.toml  setup.py  setup_cx_freeze.py  setup_cxfreeze.py
paperwork-gtk/data/: work.openpaper.Paperwork.appdata.xml
paperwork-gtk/doc/: hacking.lyx  intro.lyx  intro_de.lyx  intro_fr.lyx  usage.lyx
paperwork-gtk/l10n/: ca.po  de.po  es.po  fr.po  messages.pot  oc.po  sv.po  uk.po  zh_Hans.po
paperwork-gtk/locale/: de.po  es.po  fr.po
paperwork-gtk/scripts/: compare_algorithms.py
paperwork-gtk/src/: launcher.py
paperwork-shell/: AppImageBuilder.cli.yml  AppImageBuilder.json.yml  ChangeLog  MANIFEST.in  Makefile  README.markdown  pyproject.toml  setup.py
paperwork-shell/l10n/: ca.po  de.po  es.po  fr.po  messages.pot  oc.po  sv.po  uk.po  zh_Hans.po
paperwork-shell/tests/: tests_config.py  tests_sync.py
(+681 files in other folders)
