[project]
name = "openpaperwork-core"
description = "OpenPaperwork's core"
dynamic = ["version"]
authors = [
  {name = "Jerome Flesch", email = "jflesch@openpaper.work" },
]
license = {text = "GPL-3.0-or-later"}
readme = {file = "README.md", content-type = "text/markdown"}

dependencies = [
  "certifi",
  "distro",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
lint = [
  "flake8",
]

[tool.setuptools_scm]
root = ".."
relative_to = "__file__"
write_to = "openpaperwork-core/src/openpaperwork_core/_version.py"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
