[project]
name = "openpaperwork-gtk"
description = "OpenPaperwork's GTK plugins"
dynamic = ["version"]
authors = [
  {name = "Jerome Flesch", email = "jflesch@openpaper.work" },
]
license = {text = "GPL-3.0-or-later"}
readme = {file = "README.md", content-type = "text/markdown"}

dependencies = [
  "pygobject",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
lint = [
  "flake8",
]

[tool.setuptools_scm]
root = ".."
relative_to = "__file__"
write_to = "openpaperwork-gtk/src/openpaperwork_gtk/_version.py"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
