[project]
name = "paperwork-backend"
description = "Paperwork's backend"
dynamic = ["version"]
authors = [
  {name = "Jerome Flesch", email = "jflesch@openpaper.work" },
]
license = {text = "GPL-3.0-or-later"}
readme = {file = "README.markdown", content-type = "text/markdown"}

dependencies = [
  "openpaperwork-core",

  "Pillow",
  "psutil",
  "pycountry",
  "pyocr",
  "pypillowfight>=0.3.0",
  "python-Levenshtein",
  "scikit-learn",
  "Whoosh",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
lint = [
  "flake8",
]

[tool.setuptools_scm]
root = ".."
relative_to = "__file__"
write_to = "paperwork-backend/src/paperwork_backend/_version.py"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
