[project]
name = "paperwork-shell"
description = "Paperwork's shell interface"
dynamic = ["version"]
authors = [
  {name = "Jerome Flesch", email = "jflesch@openpaper.work" },
]
license = {text = "GPL-3.0-or-later"}
readme = {file = "README.markdown", content-type = "text/markdown"}

dependencies = [
  "openpaperwork-core",
  "paperwork-backend",

  "fabulous",
  "rich",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
lint = [
  "flake8",
]

[project.scripts]
paperwork-cli = 'paperwork_shell.main:cli_main'
paperwork-json = 'paperwork_shell.main:json_main'

[tool.setuptools_scm]
root = ".."
relative_to = "__file__"
write_to = "paperwork-shell/src/paperwork_shell/_version.py"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
